@@ -100,6 +100,11 @@ cat > ${cpu_file} <<EOF
 (print-match "ABC")
 (print-expr (.apply .upcase (abc)))
 
+(test-name ".eval")
+(print-match "(explicitly-undefined 42)")
+(define-pmacro (eval-test1 a) (explicitly-undefined a))
+(print-expr (.eval (.splice eval-test1 (.unsplice (42)))))
+
 (test-name ".let")
 (print-match "xyzzy")
 (print-expr (.let ((x xyzzy)) x))
